<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTextItemAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Item Name"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextUsernameAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Username"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextPasswordAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Password"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="Save Item" />
    </LinearLayout>

</ScrollView>
